# Planck-QSaaS

./: .env.example  .gitignore  .npmrc  API.md  README.md  VERCEL_DEPLOYMENT.md  instrumentation.ts  middleware.ts  package.json  pnpm-lock.yaml  proxy.ts  q_infratwin_control_room_trl4.py  q_infratwin_control_room_trl4_realtime_plots.py  q_infratwin_control_room_trl4_v1_1.py  q_infratwin_control_room_trl4_v1_2.py  q_infratwin_control_room_trl4_v2_1.py  q_infratwin_control_room_trl4_v2_2.py  q_infratwin_control_room_trl4_v2_3.py  q_infratwin_control_room_trl4_v2_3_quantumdots.py  q_infratwin_dashboard_trl4_execfile.py  q_infratwin_trl4_hybrid_prototype_v1_1.py  q_infratwin_trl4_run_20260115_032707.csv  q_infratwin_trl4_run_20260115_032707.jsonl  tsconfig.json  vercel.json  vitest.config.ts
__tests__/: exec-cache-sdk-live.test.ts  execution-json-shape.test.ts
app/: globals.css  layout.tsx  page.tsx
components/: animated-background.tsx  error-boundary.tsx  faq-section.tsx  footer.tsx  guest-banner.tsx  hero-animation.tsx  hero-background.tsx  interactive-qubit.tsx  language-selector.tsx  loading-spinner.tsx  page-header.tsx  pricing-section.tsx  quantum-assistant.tsx  quantum-loading-screen.tsx  sparkles.tsx  theme-toggle.tsx  title-animation.tsx
contexts/: digital-twin-mode-context.tsx  language-context.tsx  synthetic-mode-context.tsx  ui-preferences-context.tsx
sdk/python/: INSTALLATION.md  LICENSE  MANIFEST.in  README.md  install.py  pyproject.toml  setup.py
sdk/python/examples/: basic_usage.py  jupyter_notebook_example.py  planck_colab_quickstart.ipynb  planck_colab_quickstart_v0.9.ipynb  remote_quickstart.py
sdk/python/planck_sdk/: __init__.py  circuit.py  client.py  exceptions.py  py.typed  result.py
sdk/python/planck_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+137 files in other folders)
