[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planck_sdk"
version = "1.0.0"
description = "Lightweight Python SDK for Planck Quantum Digital Twins Platform"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Planck Technologies", email = "hello@plancktechnologies.xyz"}
]
keywords = ["quantum", "quantum-computing", "digital-twins", "simulation", "qasm", "planck"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Zero external dependencies - uses Python stdlib only
dependencies = []

[project.urls]
Homepage = "https://plancktechnologies.xyz"
Documentation = "https://github.com/HectorNaaa/Planck-QSaaS/tree/main/sdk/python"
Repository = "https://github.com/HectorNaaa/Planck-QSaaS"
"Bug Tracker" = "https://github.com/HectorNaaa/Planck-QSaaS/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["planck_sdk"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
planck_sdk = ["py.typed"]
